--- a/src/views/blocks/main.pug
+++ b/src/views/blocks/main.pug
@@ -1,4 +1,4 @@
-div.content
+div.main
   div
     p CONTENT
     p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo laudantium assumenda ratione nobis ullam odit, exercitationem blanditiis quasi voluptas aperiam?
