--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -13,5 +13,5 @@ html(lang="ru")
     div.wrapper
       include blocks/header.pug
       include blocks/nav.pug
-      include blocks/wrapper.pug
+      include blocks/content.pug
       include blocks/footer.pug
