--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -1,2 +1,19 @@
-footer
-  div footer
+footer.footer
+  .footer__wrapper.disp-flex 
+    .footer__menu
+      p Меню
+      ul
+        li
+          a(href="#") Акции
+        li
+          a(href="#") Новости
+        li
+          a(href="#") Услуги
+    .footer__address
+      p Адрес
+      p г.Киров,
+      p Октябрьский проспект, 133
+    .footer__vk-widget
+      p Здесь будет виджет из контакта
+  .copyright.text-center
+    p &copy; Вятская ГСХА, 2018
