--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -10,7 +10,7 @@ html(lang="ru")
     )
     title Автошкола ВятГСХА
   body
-    div.wrapper
+    div.page-wrapper
       include blocks/header.pug
       include blocks/nav.pug
       include blocks/content.pug
