--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -16,4 +16,4 @@ footer.footer
     .footer__vk-widget
       p Здесь будет виджет из контакта
   .copyright.text-center
-    p &copy; Вятская ГСХА, 2018
+    p &copy; Вятская ГСХА #0d7746
