--- a/src/sass/blocks/category/__img/_category__img.scss
+++ b/src/sass/blocks/category/__img/_category__img.scss
@@ -1,4 +1,9 @@
 .category__img {
-  width: 70px;
-  height: 70px;
+  width: 90px;
+  height: 90px;
+  transition: transform .2s ease;
+
+  &:hover {
+    transform: scale(1.05, 1.05);
+  }
 }
