--- a/src/sass/blocks/category/__link/_category__link.scss
+++ b/src/sass/blocks/category/__link/_category__link.scss
@@ -1,4 +1,8 @@
 .category__link {
   display: block;
   margin: 5px 10px;
+  text-align: center;
+  /*border: 1px solid $white;*/
+  border-radius: 50%;
+  padding: 6px 10px;
 }
