--- a/src/sass/blocks/logo/_logo.scss
+++ b/src/sass/blocks/logo/_logo.scss
@@ -1,3 +1,3 @@
-@import '__title/_logo__title';
-@import '__img/_logo__img';
-@import '__icon/_logo__icon';
+@import '__title/logo__title';
+@import '__link/logo__link';
+@import '__icon/logo__icon';
