--- a/src/sass/blocks/nav/_nav.scss
+++ b/src/sass/blocks/nav/_nav.scss
@@ -1,4 +1,9 @@
 .nav {
-  width: 80%;
-  margin: 0 auto;
+  /*box-shadow: 0 3px 2px -3px rgba(0, 0, 0, 1);*/
+
+  &__inner {
+    width: 80%;
+    height: 50px;
+    margin: 20px auto 10px;
+  }
 }
