--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -8,10 +8,12 @@ html(lang="ru")
       rel="stylesheet"
       href="css/style.css"
     )
+    
     title Автошкола ВятГСХА
   body
     div.page-wrapper
       include blocks/header.pug
       include blocks/nav.pug
+      include blocks/category.pug
       include blocks/content.pug
       include blocks/footer.pug
