add style and blocks

--- a/src/sass/blocks/footer/_footer.scss
+++ b/src/sass/blocks/footer/_footer.scss
@@ -1,3 +1,9 @@
 .footer {
-  background-color: #39a070;
+  background-color: #8492A6;
+  color: $white;
+  padding-top: 15px;
+}
+
+.copyright {
+  margin: 25px 0 0;
 }
