--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -1,14 +1,13 @@
-footer.footer
+footer.footer.shell
   .footer__wrapper.disp-flex 
     .footer__menu
-      p Меню
-      ul
-        li
-          a(href="#") Акции
-        li
-          a(href="#") Новости
-        li
-          a(href="#") Услуги
+      ul.footer-menu
+        li.footer-menu__item
+          a.footer-menu__link(href="#") Акции
+        li.footer-menu__item
+          a.footer-menu__link(href="#") Новости
+        li.footer-menu__item
+          a.footer-menu__link(href="#") Услуги
     .footer__address
       p Адрес
       p г.Киров,
@@ -16,4 +15,4 @@ footer.footer
     .footer__vk-widget
       p Здесь будет виджет из контакта
   .copyright.text-center
-    p &copy; Вятская ГСХА #0d7746
+    p &copy; Вятская ГСХА
