--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -11,9 +11,11 @@ html(lang="ru")
     
     title Автошкола ВятГСХА
   body
-    div.page-wrapper
-      include blocks/header.pug
-      include blocks/nav.pug
-      include blocks/category.pug
-      include blocks/content.pug
-      include blocks/footer.pug
+    include blocks/header.pug
+    include blocks/nav.pug
+    include blocks/category.pug
+    include blocks/sales.pug
+    include blocks/advantages.pug
+    include blocks/content.pug
+    include blocks/subscribe.pug
+    include blocks/footer.pug
