--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700');
 
-body {
+html {
   box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
   font-family: 'Source Sans Pro', sans-serif;
   color: $text;
   -webkit-font-smoothing: antialiased;
@@ -55,8 +64,4 @@ p {
 
 .text-center {
   text-align: center;
-}
-
-.shell {
-  padding: 0 15px;
 }
