--- a/src/views/blocks/nav.pug
+++ b/src/views/blocks/nav.pug
@@ -3,7 +3,7 @@ mixin menu-item(text)
     a.main-menu__link(href="#")= text 
 
 div.nav.shell
-  ul.main-menu.disp-flex
+  ul.main-menu.flex-block
     +menu-item("Акции")
     +menu-item("Услуги")
     +menu-item("Онлайн обучение")
