--- a/src/views/blocks/subscribe.pug
+++ b/src/views/blocks/subscribe.pug
@@ -1,3 +1,3 @@
-.subscribe.shell
-  p Курсы (теория)
+.subscribe.shell.shell--content.text-center
+  h2.block-title.text-uppercase Курсы (теория)
   p Как записаться на курсы? Достаточно позвонить нам по телефону 77-54-53, 42-15-16 или оставить заявку в сообщении.
