--- a/src/sass/common/_shell.scss
+++ b/src/sass/common/_shell.scss
@@ -5,7 +5,13 @@
   margin-left: auto;
   margin-right: auto;
 
+  &--content {
+    margin-top: 45px;
+    margin-bottom: 45px;
+  }
 }
+
+
 
 .no-gutters {
   padding-left: 0;
