--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -1,6 +1,6 @@
-header.header.flex-block.shell
+header.header.shell.flex-block.flex-block--justify-sb
   div.logo
-    a.logo__link.flex-block.disp-flex--align-i-center(href='#')
+    a.logo__link.flex-block.flex-block--align-center(href='#')
       i.fas.fa-shipping-fast.logo__icon
       span.logo__title Автошкола ВятГСХА
   .contacts
