--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -15,6 +15,7 @@ html(lang="ru")
     include blocks/nav.pug
     include blocks/category.pug
     include blocks/sales.pug
+    include blocks/price.pug
     include blocks/advantages.pug
     include blocks/content.pug
     include blocks/subscribe.pug
