--- a/src/sass/blocks/button/_button.scss
+++ b/src/sass/blocks/button/_button.scss
@@ -1,12 +1,14 @@
 .button {
   display: block;
-  
   text-align: center;
   background-color: $light_green;
   transition: background-color .2s ease;
   border: none;
   color: $white;
   cursor: pointer;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 
   &:hover {
     background-color: $dark_green;
