--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'blocks/category/category';
 @import 'blocks/nav/nav';
 @import 'blocks/main-menu/main-menu';
+@import 'blocks/price/price';
 @import 'blocks/advantage/advantage';
 @import 'blocks/footer/footer';
 @import 'blocks/footer-menu/footer-menu'
