--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -63,3 +63,22 @@ h4 {
   margin: 0 0 30px 0;
 }
 
+.ya-maps {
+  width: 100%;
+  height: 50vh;
+}
+
+.thumb-wrap {
+  position: relative;
+  padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+.thumb-wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
