--- a/src/sass/common/_shell.scss
+++ b/src/sass/common/_shell.scss
@@ -6,8 +6,8 @@
   margin-right: auto;
 
   &--content {
-    margin-top: 45px;
-    margin-bottom: 45px;
+    padding-top: 45px;
+    padding-bottom: 45px;
   }
 }
 
