--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,9 @@
 @import 'blocks/category/category';
 @import 'blocks/nav/nav';
 @import 'blocks/main-menu/main-menu';
+@import 'blocks/sales/sales';
 @import 'blocks/price/price';
+@import 'blocks/card/card';
 @import 'blocks/advantage/advantage';
 @import 'blocks/footer/footer';
 @import 'blocks/footer-menu/footer-menu'
