--- a/src/views/blocks/sales.pug
+++ b/src/views/blocks/sales.pug
@@ -1,2 +1,5 @@
-.sales.shell
+.sales.shell.no-gutters
   p Скидки и акции
+  img.category__img-bg(src="/images/offroad.jpg")
+div.thumb-wrap
+  iframe(width='100%' height='100%' src='https://www.youtube.com/embed/ZPB4SES2quM' frameborder='0' allow='autoplay; encrypted-media' allowfullscreen)
