--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -19,4 +19,5 @@ html(lang="ru")
     include blocks/advantages.pug
     include blocks/content.pug
     include blocks/subscribe.pug
+    include blocks/maps.pug
     include blocks/footer.pug
