--- a/src/views/blocks/advantages.pug
+++ b/src/views/blocks/advantages.pug
@@ -6,7 +6,7 @@ mixin advantage(icon, title, text)
 
 .advantages.shell.shell--content
   h2.block-title.text-uppercase.text-center Наши преимущества
-  div.flex-block
+  div.flex-block.flex-block--justify-center
     +advantage("fas fa-desktop", "Аудитории", "Занимайтесь на современных компьютерах! Более 20 оборудованных аудиторий!")
     +advantage("fas fa-users", "Преподаватели", "(убрать?)Занятия ведут кандидаты технических наук в области автомобилестроения")
     +advantage("fas fa-car", "Тренажеры", "(убрать?)Тренируйтесь не выезжая на дороги! Абсолютно безопасно, а самое главное БЕСПЛАТНО! Свободное посещение")
