--- a/src/views/blocks/category.pug
+++ b/src/views/blocks/category.pug
@@ -14,4 +14,4 @@ div.categories.shell.no-gutters
     +category("images/tractor.svg", "Трактор", "tractor", "B, C, D, E")
     +category("images/allroads.svg", "Вездеход", "vezdehod", "A2")
     +category("images/harvester.svg", "Комбайн", "harvester", "F")
-  img.category__img-bg(src="/images/back.jpg")
+  img.img-bg(src="/images/back.jpg")
