--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -1,6 +1,7 @@
 footer.footer.shell
   .footer__wrapper.disp-flex 
     .footer__menu
+      p.footer__title Автошкола
       ul.footer-menu
         li.footer-menu__item
           a.footer-menu__link(href="#") Акции
@@ -8,10 +9,12 @@ footer.footer.shell
           a.footer-menu__link(href="#") Новости
         li.footer-menu__item
           a.footer-menu__link(href="#") Услуги
-    .footer__address
-      p Адрес
-      p г.Киров,
-      p Октябрьский проспект, 133
+    .footer__address.address
+      p.footer__title Адрес:
+      p.address__street г.Киров,
+      p.address__street Октябрьский проспект, 133, каб. 126
+      p.address__phone +7 (8332) 77-54-53
+      p.address__phone +7 (8332) 42-15-16
     .footer__vk-widget
       p Здесь будет виджет из контакта
   .copyright.text-center
