--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -4,6 +4,7 @@ header.header.shell.flex-block.flex-block--justify-sb
       i.fas.fa-shipping-fast.logo__icon
       span.logo__title Автошкола ВятГСХА
   .contacts
-    p.contacts__line Октябрьский проспект, 133
-    p.contacts__line 77-77-77
+    p.contacts__line Октябрьский проспект, 133, каб. 126
+    p.contacts__line +7 (8332) 77-54-53
+    p.contacts__line +7 (8332) 42-15-16
     a(href="#").button.button--medium Онлайн запись
