--- a/src/views/blocks/main.pug
+++ b/src/views/blocks/main.pug
@@ -1,5 +1,30 @@
-div.main
-  div
-    p CONTENT
-    p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo laudantium assumenda ratione nobis ullam odit, exercitationem blanditiis quasi voluptas aperiam?
-    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rem culpa provident aperiam quasi nulla cupiditate fugiat nobis, magnam omnis consequatur mollitia itaque tempora fugit nemo optio eum, delectus accusantium soluta reiciendis earum ipsam unde beatae? Temporibus aliquid cupiditate aspernatur.
+div.main.flex-block__col11
+  h2 Трэкол (категория A2)
+  img.responsive-img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
+  p 
+    |К категории А2 относятся внедорожные автотранспортные средства, 
+    |разрешенная максимальная масса которых не превышает 3500 килограммов и число сидячих мест которых,
+    |помимо сиденья водителя, не превышает восьми.
+  p
+    |К внедорожным автотранспортным средствам относятся снегоболотоходы, трэколы, багги Вятская ГСХА
+    | – единственная образовательная организация в г. Кирове в которой можно пройти обучение на категорию А2!
+  h3 Что нужно для управления трэколами и багги?
+  p Для права управления трэколами и багги (равно как и снегоболотоходами) Вам необходимо иметь удостоверение тракториста с открытой категорией А2.
+  p 
+    |Теоретические занятия проводятся в главном корпусе академии на Октябрьском проспекте, 
+    |практические занятия по вождению проводятся на трактородроме Вятской ГСХА в Чистых Прудаx.
+  p Экзамены сдаются на базе и на технике Вятской ГСХА!
+  h3 Продолжительность обучения на категорию А2 – 1,5 месяца!
+  h3 Для обучения на право управления трэколами и багги Вам необходимо принести:
+  p - копию паспорта;
+  p - копию водительского удостоверения (наличие автомобильной категории В обязательно!);
+  p - медицинскую справку;
+  p - 3 фотографии размером 3×4 см.
+  h3 Обучение можно проходить с 19 лет.
+  h3 Стоимость обучения – от 9000 руб.
+  p Возможна оплата в рассрочку.
+  div.flex-block.flex-block--justify-center
+    div.media.text-center
+      img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
+    div.media.text-center
+      img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
