--- a/src/sass/blocks/category/_category.scss
+++ b/src/sass/blocks/category/_category.scss
@@ -15,5 +15,5 @@
 @import '__item/category__item';
 @import '__link/category__link';
 @import '__img/category__img';
-@import '__img-bg/category__img-bg';
+/*@import '__img-bg/category__img-bg';*/
 @import '__text/category__text';
