--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,16 +7,19 @@
 @import 'common/shell';
 @import 'common/text';
 @import 'common/flexbox';
+@import 'blocks/button/button';
+@import 'blocks/img-bg/img-bg';
 @import 'blocks/header/header';
 @import 'blocks/logo/logo';
 @import 'blocks/contacts/contacts';
-@import 'blocks/button/button';
 @import 'blocks/category/category';
 @import 'blocks/nav/nav';
 @import 'blocks/main-menu/main-menu';
-@import 'blocks/sales/sales';
+@import 'blocks/sale/sale';
 @import 'blocks/price/price';
 @import 'blocks/card/card';
 @import 'blocks/advantage/advantage';
 @import 'blocks/footer/footer';
-@import 'blocks/footer-menu/footer-menu'
+@import 'blocks/footer-menu/footer-menu';
+@import 'blocks/address/address';
+@import 'blocks/site-content/content';
