--- a/src/views/blocks/sidebar.pug
+++ b/src/views/blocks/sidebar.pug
@@ -1,4 +1,4 @@
-aside.sidebar
+aside.sidebar.flex-block__col4
   div
     p SIDEBAR 
     p Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci est mollitia sunt, cumque laborum consequatur libero non voluptatem eius eum, fugit pariatur exercitationem natus quis numquam vitae, incidunt similique a!
