--- a/src/sass/blocks/site-content/_content.scss
+++ b/src/sass/blocks/site-content/_content.scss
@@ -14,16 +14,15 @@
 
 .responsive-img {
   width: 100%;
-  margin: 10px;
 }
 
 
 .media {
   width: 45%;
-  min-width: 300px;
+  min-width: 220px;
   margin: 10px;
 
-  img {
+  /*img {
     max-width: 100%;
-  }
+  }*/
 }
