--- a/src/sass/common/_shell.scss
+++ b/src/sass/common/_shell.scss
@@ -9,6 +9,10 @@
     padding-top: 45px;
     padding-bottom: 45px;
   }
+
+  &--color {
+    background-color: $light_dark_white;
+  }
 }
 
 .no-gutters {
