--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'common/text';
 @import 'common/flexbox';
 @import 'blocks/button/button';
+@import 'blocks/input-auto/input-auto';
 @import 'blocks/img-bg/img-bg';
 @import 'blocks/header/header';
 @import 'blocks/logo/logo';
@@ -19,7 +20,10 @@
 @import 'blocks/price/price';
 @import 'blocks/card/card';
 @import 'blocks/advantage/advantage';
+@import 'blocks/subscribe/subscribe';
 @import 'blocks/footer/footer';
 @import 'blocks/footer-menu/footer-menu';
 @import 'blocks/address/address';
 @import 'blocks/site-content/content';
+@import 'blocks/sidebar/sidebar';
+@import 'blocks/side-news/side-news';
