--- a/src/views/blocks/footer.pug
+++ b/src/views/blocks/footer.pug
@@ -1,5 +1,5 @@
 footer.footer.shell
-  .footer__wrapper.disp-flex 
+  .footer__wrapper.flex-block.flex-block--justify-sb
     .footer__menu
       p.footer__title Автошкола
       ul.footer-menu
