--- a/src/views/blocks/main.pug
+++ b/src/views/blocks/main.pug
@@ -1,5 +1,5 @@
 div.main.flex-block__col11
-  h2 Трэкол (категория A2)
+  h2.block-title Трэкол (категория A2)
   img.responsive-img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
   p 
     |К категории А2 относятся внедорожные автотранспортные средства, 
@@ -25,6 +25,10 @@ div.main.flex-block__col11
   p Возможна оплата в рассрочку.
   div.flex-block.flex-block--justify-center
     div.media.text-center
-      img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
+      img.responsive-img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
     div.media.text-center
-      img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
+      img.responsive-img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
+    div.media.text-center
+      img.responsive-img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
+    div.media.text-center
+      img.responsive-img(src="http://vgsha.info/images/stories/autoschool/trekol_1.jpg")
