--- a/src/views/blocks/price.pug
+++ b/src/views/blocks/price.pug
@@ -7,7 +7,7 @@ mixin cost(name, cat, cost, time)
     p.card__text= time
     a.button.button--medium(href="#") Подробнее
 
-.price.shell.shell--content
+.price.shell.shell--content.shell--color
   h2.block-title.text-uppercase.text-center Стоимость обучения
   div.flex-block.flex-block--justify-center
     +cost("Автомобиль", "категория B", "22000", "от 1 месяца")
