--- a/src/views/blocks/sidebar.pug
+++ b/src/views/blocks/sidebar.pug
@@ -1,4 +1,15 @@
 aside.sidebar.flex-block__col4
-  div
-    p SIDEBAR 
-    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci est mollitia sunt, cumque laborum consequatur libero non voluptatem eius eum, fugit pariatur exercitationem natus quis numquam vitae, incidunt similique a!
+  div.side-news
+    h3.sidebar__title Новости
+    div.side-news__block
+      h4.side-news__title Новости номер один Автошкола Вятской ГСХА
+      img.responsive-img(src='http://vgsha.info/images/stories/autoschool/snegohod.jpg')
+    div.side-news__block
+      h4.side-news__title Новости номер два Автошкола Вятской ГСХА
+      img.responsive-img(src='http://vgsha.info/images/stories/autoschool/quadrocycle.jpg')
+    div.side-news__block
+      h4.side-news__title Новости номер три
+      img.responsive-img(src='http://vgsha.info/images/ingeneer/Av02.jpg')
+    div.side-news__block
+      h4.side-news__title Новости номер четыре Автошкола Вятской ГСХА Тут будет название подлиннее вдруг реальное название будет очень большое
+      img.responsive-img(src='http://vgsha.info/images/stories/autoschool/quadrocycle.jpg')
