--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -17,6 +17,7 @@ html(lang="ru")
     include blocks/sales.pug
     include blocks/price.pug
     include blocks/advantages.pug
+    include blocks/youtube.pug
     include blocks/content.pug
     include blocks/subscribe.pug
     include blocks/maps.pug
