--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -68,17 +68,27 @@ h4 {
   height: 50vh;
 }
 
-.thumb-wrap {
+.responsive-video {
+  width: 800px;
   position: relative;
   padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
   padding-top: 30px;
   height: 0;
   overflow: hidden;
+  
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
-.thumb-wrap iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 80%;
-  height: 80%;
+
+.insert-video {
+  position: relative;
+  max-width: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+
 }
